# ames-housing

./: README.md  pyproject.toml
code/: 01_EDA_Cleaning.ipynb  02_Modeling.ipynb  gridsearch.csv  lasso_fixed.csv
code/.ipynb_checkpoints/: 01_EDA_Cleaning-checkpoint.ipynb  02_Modeling-checkpoint.ipynb
datasets/: housing_cleaned.csv
